# indexer

./: .gitignore  CMakeLists.txt
include/indexer/: filesystem_watcher.h  indexer.h  inotify_filesystem_watcher.h  path_utils.h
src/: CMakeLists.txt  filesystem_watcher.cpp  filesystem_watcher_impl.h  indexer.cpp  inotify_filesystem_watcher.cpp  repl.cpp  windows_filesystem_watcher.cpp
test/: CMakeLists.txt  basic.cpp  filesystem_utils.h  filesystem_watch.cpp
